[project]
name = "hello-python"
version = "0.1.0"
description = "Only demo purpose"
authors = [
    {name = "rooooomania",email = "rooooomania@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyramid (==2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
